force-app/main/default/objects/Employee__c/fields/Employee_Number_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number_Id__c</fullName>
    <displayFormat>EN-{000}</displayFormat>
    <label>Employee Number/Id</label>
    <type>AutoNumber</type>
</CustomField>