force-app/main/default/objects/Employee__c/listViews/Unassigned_Employees.listView-meta.xml
<ListView>
    <fullName>Unassigned_Employees</fullName>
    <columns>NAME</columns>
    <columns>Employee_Number_Id__c</columns>
    <columns>State_Province__c</columns>
    <columns>City__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Employee_Status__c</field>
        <operation>equals</operation>
        <value>Unassigned</value>
    </filters>
    <label>Unassigned Employees</label>
</ListView>